<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".EmployeeChangesSavedActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="200sp"
        android:layout_height="169sp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/guy"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        tools:ignore="ImageContrastCheck" />

    <!-- Employee Name -->
    <TextView
        android:id="@+id/tv_employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/raj_mehera"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- "Changes saved" text -->
    <TextView
        android:id="@+id/tv_changes_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_employee_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/your_request_has_been_approved"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- Horizontal divider between "Changes saved" and subtext -->
    <View
        android:id="@+id/divider_above_subtext"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@id/tv_changes_saved"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/white" />

    <!-- Subtext -->
    <TextView
        android:id="@+id/tv_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_above_subtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/your_request_has_been_approved_by_the_administrator"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

    <!-- Another divider below subtext if needed -->
    <View
        android:id="@+id/divider_below_subtext"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@id/tv_subtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/buttondone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_below_subtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/done" />

    <ImageView
        android:id="@+id/tick_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/buttondone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/tick"
        android:src="@drawable/ic_tick" />


</RelativeLayout>