<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".EmployeeChangesSavedActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="200sp"
        android:layout_height="169sp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/man"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <!-- Employee Name -->
    <TextView
        android:id="@+id/tv_employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_to_workflow"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- "Changes saved" text -->
    <TextView
        android:id="@+id/tv_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_employee_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/password_rest_done"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- Horizontal divider between "Changes saved" and subtext -->
    <View
        android:id="@+id/divider_above_subtext"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@id/tv_password_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/white" />

    <!-- Subtext -->
    <TextView
        android:id="@+id/tv_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_above_subtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/your_password_has_been_changed_and_you_can_now_log_back_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/darkgreen"
        android:layout_below="@id/tv_subtext"
        android:text="@string/back_to_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="15dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- "Or continue with" Section with Horizontal Lines -->
    <LinearLayout
        android:id="@+id/continue_with_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp">

        <!-- Left Horizontal Line -->
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white" />

        <!-- "Or continue with" Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/or_continue_with"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <!-- Right Horizontal Line -->
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/continue_with_section"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@drawable/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/googlelogo"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:padding="2dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

        </LinearLayout>


    </LinearLayout>






</RelativeLayout>